AL-192 : Add initial design around spark streaming processors